<resources>
    <string name="app_name">CookMaster</string>
    <string name="bon_appetit">Bon appetit!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_picture">Select picture</string>
    <string name="you_can_instantly_choose_your_desired_dishes_see_your_balance_make_payments_as_well_as_track_your_expenses">You can instantly choose your desired dishes, see your balance, make payments, as well as track your expenses.</string>
    <string name="this_is_a_kitchen_application_for_companies">This is a kitchen application for companies</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">skip</string>
    <string name="my_preference">instigatemobile.com.cookmaster.MyPref</string>
    <string name="my_preference_key">instigatemobile.com.cookmaster.MyPrefKey</string>
    <string name="start">Start</string>
    <string name="welcome_to_home_page">Welcome to Home Page!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email_address">Email Address</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="send_pass">Send</string>
    <string name="action_about">About</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="home">Home</string>
    <string name="current_consultants">Current Consultants</string>
    <string name="default_status">Default status</string>
    <string name="payment">Payment</string>
    <string name="payment_history">Payment History</string>
    <string name="log_out">Log Out</string>
    <string name="todayManu">Menu of today</string>
    <string name="status">Status</string>
    <string name="daily_expenses">Daily expenses</string>
    <string name="total_expenses">Total expenses</string>
    <string name="enter_email">Invalid email</string>
    <string name="email_sent">Reset email sent!</string>
    <string name="error">Error while sending email.</string>
    <string name="enter_your_email_please">Enter your email please</string>
    <string name="please_wait">Please wait</string>
    <string name="enter_your_email_in_order_to_reset">Enter your email in order to reset</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="change_user_name">Change user name</string>
    <string name="saveBtnText">Save</string>
    <string name="messageForEmptyUsername">The username field can not be empty</string>
    <string name="welcome_activity_skip">SKIP</string>
    <string name="message_for_upload_img">You haven\'t picked Image</string>
    <string name="message_for_password_updated">Password updated</string>
    <string name="message_for_password_not_updated">Error password not updated</string>
    <string name="message_for_error_auth_failed">Error auth failed</string>
    <string name="message_for_defferent_new_and_comfirmed_fields">New password and comfirmed password\'s fields are different</string>
    <string name="confirmed">confirmed</string>
    <string name="success">Success</string>
    <string name="դեֆաւլտ">Default</string>
    <string name="last_paid_amount">Last paid amount</string>
    <string name="_0">0</string>
    <string name="payment_status">Payment status</string>
    <string name="money">Money</string>
    <string name="pay">Pay</string>
    <string name="instigate_mobile_cjsc">Instigate Mobile CJSC</string>
    // Stepan
    <string name="producted_by_itc_9">Producted by ITC-9</string>
    //Stepan
    <string name="our_team">Our team</string>
    //Stepan
    <string name="stepan">Stepan</string>
    <string name="vahan">Vahan</string>
    <string name="samvel">Samvel</string>
    <string name="taron">Taron</string>
    <string name="smbat">Smbat</string>
    <string name="mikayel">Mikayel</string>
    <string name="elya">Elya</string>
    <string name="invalid_name">Please select valid dates</string>
    <string name="accept">Accept</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="choose_days_for_default_status">Choose days for default status</string>
    <string name="message_you_have_not_picked_image">You haven\'t picked Image</string>
    <string name="message_name_can_not_conteins_symbol">Name can not conteins symbol</string>
    <string name="home_page_activity_name">HomePageActivity</string>
    <string name="reg_exp_for_name">^[a-zA-Z_ ]*$</string>
    <string name="users_str">users</string>
    <string name="name_surname_str">name_surname</string>
    <string name="history_str">history</string>
    <string name="month_history_fragment">MonthHistoryFragment</string>
    <string name="user_expens_str">user_expens</string>
    <string name="users">users</string>
    <string name="money_paid">Money Paid</string>
    <string name="payment_PF">payment</string>
    <string name="payment_status_PF">payment_status</string>
    <string name="pending_PF">pending</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="daily_expens_str">Daily expens</string>
    <string name="total_expens_str">Total expens</string>
    <string name="about_page_title">About</string>
    <string name="change_password_page_title">Change Password</string>
    <string name="settings_page_title">Settings</string>
    <string name="current_consultants_page_title">Current Consultants</string>
    <string name="default_status_page_title">Default Status</string>
    <string name="payment_page_title">Payment</string>
    <string name="history_page_title">History</string>
    <string name="zero">0</string>
    <string name="invalid_input">Invalid input</string>

</resources>
