<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/background"
    android:id="@+id/login_fragment"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forgot_password_ll_height"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_left_right"
        android:paddingRight="@dimen/padding_left_right">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="287dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/forgot_frag_text_marg_top"
            android:text="@string/enter_your_email_in_order_to_reset"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/pass_margin_bottom">

            <EditText
                android:id="@+id/etPasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/forgot_frag_edit_text_marg_top"
                android:hint="@string/enter_your_email_please"
                android:inputType="textEmailAddress"
                tools:ignore="TextFields" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnPasswordReset"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/forgot_frag_reset_btn_marg_top"
            android:background="@color/btn_color"
            android:gravity="center"
            android:text="@string/reset_password"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/forgot_size"
            android:textStyle="italic"
            />
    </LinearLayout>
</LinearLayout>

