<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/default_status_background"
    android:id="@+id/login_fragment">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_left_right"
        android:paddingRight="@dimen/margin_left_right"
        android:background="@color/transparent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/btnSize"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:text="@string/choose_days_for_default_status"
            android:layout_marginTop="@dimen/btn_margin_top_bottom"
            android:layout_marginBottom="@dimen/margin_left_right"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@+id/from_layout"
            android:layout_marginTop="@dimen/btn_margin_top_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/home_page_meal_background"
            android:weightSum="6">

            <Button
                android:layout_weight="2"
                android:background="#00ffffff"
                android:textStyle="italic"
                android:id="@+id/from_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_date"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/btnSize"/>

            <TextView
                android:id="@+id/from_date_tv"
                android:textColor="@color/orange"
                android:layout_weight="4"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:textSize="@dimen/btnSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/to_layout"
            android:layout_marginTop="@dimen/btn_margin_top_bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/home_page_meal_background"
            android:weightSum="6">

            <Button
                android:layout_weight="2"
                android:background="#00ffffff"
                android:textStyle="italic"
                android:id="@+id/to_date_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_date"
                android:textColor="@color/btn_color"
                android:textSize="@dimen/btnSize"/>

            <TextView
                android:id="@+id/to_date_tv"
                android:textColor="@color/orange"
                android:layout_weight="4"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/margin_left_right"
                android:textSize="@dimen/btnSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/daily_meal_margin"
            android:paddingBottom="@dimen/daily_meal_margin"
            android:layout_marginTop="@dimen/btn_margin_top_bottom"
            android:layout_marginBottom="@dimen/padding_left_right"
            android:background="@color/home_page_meal_background"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/usernameSize"
                android:layout_weight="2.5"
                android:layout_marginStart="@dimen/daily_meal_margin"
                android:text="@string/default_status"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/default_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/accept_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:background="@color/btn_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/btn_margin_top_bottom"
            android:padding="12dp"
            android:text="@string/accept"/>

    </LinearLayout>
</ScrollView>

