<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/home_page_background"
    android:id="@+id/login_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_left_right"
        android:layout_marginLeft="@dimen/margin_left_right"
        android:layout_marginRight="@dimen/margin_left_right"
        android:layout_marginBottom="@dimen/margin_left_right"
        android:orientation="vertical"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/menu_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/daily_meal_margin"
            android:paddingBottom="@dimen/daily_meal_margin"
            android:textColor="@color/btn_color"
            android:textSize="@dimen/btnSize"
            android:background="@color/home_page_meal_background"
            android:paddingLeft="@dimen/daily_meal_margin"
            android:text="@string/todayManu"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/home_page_rv"
                android:background="@color/transparent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/daily_meal_margin"
            android:paddingBottom="@dimen/daily_meal_margin"
            android:layout_marginTop="1dp"
            android:background="@color/home_page_meal_background"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:textColor="@color/btn_color"
                android:id="@+id/total_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/usernameSize"
                android:layout_weight="2.5"
                android:layout_marginStart="@dimen/daily_meal_margin"
                android:text="@string/total_expenses"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/total_exp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/usernameSize"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/daily_meal_margin"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/daily_meal_margin"
            android:paddingBottom="@dimen/daily_meal_margin"
            android:layout_marginTop="1dp"
            android:background="@color/home_page_meal_background"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:textColor="@color/btn_color"
                android:id="@+id/daily_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/usernameSize"
                android:layout_weight="2.5"
                android:layout_marginStart="@dimen/daily_meal_margin"
                android:text="@string/daily_expenses"
                android:textStyle="bold" />

            <TextView
                android:textColor="@color/colorAccent"
                android:id="@+id/daily_exp_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/usernameSize"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/daily_meal_margin"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/daily_meal_margin"
            android:paddingBottom="@dimen/daily_meal_margin"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="@dimen/padding_left_right"
            android:background="@color/home_page_meal_background"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:textColor="@color/btn_color"
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/usernameSize"
                android:layout_weight="2.5"
                android:layout_marginStart="@dimen/daily_meal_margin"
                android:text="@string/status"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>

